--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
 .App {
+  margin: 0;
   text-align: center;
+  background: url("https://th.bing.com/th/id/OIP.XxjBONglP6Jso73ng5LcuAHaNK?pid=ImgDet&rs=1");
+  background-size: 100% 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+button {
+  font-size: calc(10px + 2vmin);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logOut{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom:1px solid black ;
+  background-color: rgba(0, 0, 0, 0.258);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logOut button{
+  width: 8%;
+  cursor: pointer;
+  color: #e73c7e;
+  background: white;
+  border: 2px inset #e73c7e;
+  border-radius: 2.5px;
+  padding: 2px;
+}
+
+.logOut p{
+  font-weight: 500;
+}
+
+.onOff{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  margin-left: 83%;
+  background-color: green;
+}
+
+.linksHolder{
+  position: absolute;
+  margin-top: 2%;
+  margin-left: 6%;
+  width: 24%;
+  height: 15vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.links{
+  width: 100%;
+  color: rgba(0, 0, 0, 0.63);
+  font-size: 1.2em;
+  font-weight: 500;
+  text-decoration: none;
+  border-bottom: 1.5px solid #ee7752;
+  border-left: 1.5px solid rgba(255, 255, 255, 0);
+  text-align: start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.linkClick{
+  width: 100%;
+  color: rgba(0, 0, 0, 0.63);
+  font-size: 1.2em;
+  font-weight: 500;
+  text-decoration: none;
+  border-bottom: 1.5px solid #ee765200;
+  border-left: 2.5px solid #ee7752;
+  background: linear-gradient(to right,#ee7652af,white);
+  text-align: start;
+}
+
+footer{
+  margin-top: 15%;
+  border-top: 1px solid black
+}
+
+@media screen and (max-width:1024px) {
+  .logOut button{width: 17%}
+  .linksHolder{margin-left: 10%;width: 80%;}
+  .onOff{
+    height: 10px;
+    width: 10px;
+    margin-left: 72%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width:425px) {
+  .logOut button{width: 27%}
+  .linksHolder{
+    width: 90%;
+    height: 4%;
+    margin-top: 3%;
+    margin-left: 5%;
+    flex-direction: row;
+  }
+  .links{font-size: .8em;}
+  .linkClick{font-size: .8em;}
+  .onOff{
+    height: 10px;
+    width: 10px;
+    margin-left: 46%;
   }
 }
